[project]
name = "neosr"
version = "1.0.0"
description = "A super-resolution training framework."
readme = "readme.md"
requires-python = ">=3.11,<3.14"
keywords = [
  "neosr", "super-resolution", "machine-learning", "image-restoration"
]
maintainers = [{ name = "0ZL0" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "einops>=0.8",
    "lmdb>=1.6",
    "numpy>=2.2,<2.5",
    "onnx>=1.18",
    "onnxruntime-gpu>=1.22",
    "opencv-python-headless>=4.11",
    "pyiqa>=0.1.14",
    "pywavelets>=1.8",
    "scipy>=1.15",
    "tensorboard>=2.20",
    "torch>=2.7",
    "torchvision>=0.22",
    "tqdm>=4.67",
    "triton>=3.3; sys_platform == 'linux'",
]

[project.urls]
Repository = "https://github.com/0ZL0/neosr"
Upstream = "https://github.com/neosr-project/neosr"

[tool.uv]
package = false
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
lint.select = ["ALL"]
lint.fixable = ["ALL"]
lint.ignore = [
    "ANN",
    "B904",
    "C90",
    "COM812",
    "CPY",
    "D",
    "DOC",
    "ERA001",
    "E501",
    "E722",
    "E741",
    "FIX",
    "FBT001",
    "FBT002",
    "G004",
    "ISC001",
    "N8",
    "PLR",
    "PLC0206",
    "PGH003",
    "S101",
    "S110",
    "S311",
    "S403",
    "SLF001",
    "T201",
    "TD",
]
exclude = ["*_arch.py", ".venv/*", "uv.lock"]
preview = true

[tool.ruff.format]
skip-magic-trailing-comma = true
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"neosr/__init__.py" = ["F403"]
